--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     </title>
 </head>
 <body>
-    
+    <script>
+        // para criar uma variavel com valor indefinido 
+        let nome;
+        console.log(nome);
+        // criar uma variavel vazia
+        let disciplina = null;
+        console.log (disciplina);
+        
+
+    </script>
 </body>
 </html>
